--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Lost Box</title>
-    <base href="/">
+  <meta charset="utf-8">
+  <title>Lost and Found</title>
+  <base href="/">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.1.3/ofi.min.js"></script>
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
 </head>
-
 <body>
-    <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
-
 </html>
